fix collapse issue for searchbar

--- a/frontend/src/scss/layout/navbar.scss
+++ b/frontend/src/scss/layout/navbar.scss
@@ -7,6 +7,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  min-width: 850px;
   width: 100%;
   height: 100px;
   background-color: white;
