--- a/frontend/src/scss/layout/searchbar.scss
+++ b/frontend/src/scss/layout/searchbar.scss
@@ -6,22 +6,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  // height: 100%;
-  // min-height: 600px;
-  // height: 95vh;
+  min-width: 850px;
+  // width: 100vw;
   flex-direction: column;
   margin-top: 80px;
   font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 200;
 }
 
-
 .search-form-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  // max-width: 1260px;
   width: 75%;
+  min-width: 850px;
   border-radius: 10px;
 }
 .search-form-container > form {
@@ -46,19 +45,16 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
+  align-items: left;
+  float: left;
   font-weight: 400;
   border: 1px solid #d7d7d7;
   height: 46px;
-  width: 60%;
+  width: 49%;
+  // min-width: 45%;
+  max-width: 695px;
   background-color: white;
   padding-top: 5px;
-}
-.gear-label {
-  font-size: 12px;
-  font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 200;
-  padding-left: 7px;
 }
 
 .input--style-1{
@@ -72,7 +68,7 @@ body {
 }
 
 .date-range {
-  display: flex;
+  display: absolute;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -90,6 +86,12 @@ body {
   width: 90px;
   outline: none;
   border: 0;
+}
+
+.gear-submit {
+  // position: absolute;
+  min-width: 10%;
+  float: right;
 }
 
 .explore-container {
@@ -112,6 +114,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 73%;
+  min-width: 850px;
 }
 
 .information-header {
@@ -130,6 +133,7 @@ body {
 .information-container {
   display: flex;
   width: 100%;
+  min-width: 850px;
   flex-direction: row;
 }
 .information-text {
